--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -292,8 +292,10 @@ en:
       invitation_instructions:
         subject: "%{user} invited you to join %{team} team"
         hello: "Hello %{name}"
-        someone_invited_you_default: "%{name} has invited you to %{team}."
-        someone_invited_you_custom: "%{name} has invited you to %{team}, saying:"
+        someone_invited_you_default:
+          html: "%{name} has invited you to %{team}."
+        someone_invited_you_custom:
+          html: "%{name} has invited you to %{team}, saying:"
         accept: 'You can accept this invitation through this link: %{url}'
         ignore: "If you don't want to accept the invitation, please ignore this email."
         app_team: "%{app} Team"
