--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -296,6 +296,12 @@ en:
         accept: 'You can accept this invitation through this link: %{url}'
         ignore: "If you don't want to accept the invitation, please ignore this email."
         app_team: "%{app} Team"
+  user_invitation:
+    invited: 'This user was already invited to this team.'
+    member: 'This user is already a team member.'
+    team_found: 'Team not found.'
+    invalid: 'Invitation token is invalid.'
+    no_invitation: 'No invitation exists for team %{name}'
   error_user_is_not_a_team_member: "Sorry, you can only assign tasks to members of this team"
   slack_assign_verification_status: "*%{user}* assigned %{url} to *%{assignee}* in project *%{project}*"
   slack_unassign_verification_status: "*%{user}* unassigned %{url} from *%{assignee}* in project *%{project}*"
