Ticket #7130: Refactor task status to be a workflow

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,16 @@ en:
   uploadefile: File
   blank: "(blank)"
   statuses:
+    task:
+      unresolved:
+        label: Unresolved
+        description: Default, not resolved yet
+      resolved:
+        label: Resolved
+        description: Task was resolved
+      cant_be_resolved:
+        label: Cannot be resolved
+        description: It was not possible to resolve the task
     media:
       undetermined:
         label: Unstarted
