--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,11 +1,9 @@
 ---
 en:
-  link: Link
-  claim: Claim
-  uploadedimage: Image
-  uploadefile: File
-  blank: "(blank)"
   statuses:
+    ids:
+      verification_status: verification
+      translation_status: translation
     media:
       undetermined:
         label: Unstarted
@@ -80,6 +78,15 @@ en:
       claim: Claim
       uploaded_image: Image
       uploaded_file: File
+      task: Task
+      comment: Note
+      project_media: Item
+      media: Item
+      project: Project
+      team: Team
+      user: User
+      source: Source
+      project_source: Source
     attributes:
       tag:
         data: Tag
@@ -94,7 +101,7 @@ en:
       contact:
         phone: Phone
       comment:
-        text: Comment
+        text: Note
       user:
         reset_password_token: Reset password token
         email: E-mail
@@ -137,29 +144,43 @@ en:
   mail_request_to_join_processed: Your request to join %{team} on %{app_name} was
     %{status}
   mail_new_account: New account for you on %{app_name}
-  slack_update_verification_status: "*%{user}* changed the verification status on %{url} in *%{project}*
-    from _%{from}_ to *%{to}*"
-  slack_save_embed: "*%{user}* changed a report title in *%{project}* from _%{from}_
-    to %{to}"
-  slack_save_comment: "*%{user}* added a note to %{url} in *%{project}*: %{comment}"
-  slack_create_project: "*%{user}* created a project: %{url}"
-  slack_create_team_user: "*%{user}* joined team %{url}"
-  slack_create_project_media: "*%{user}* added a new %{type} to *%{project}*: %{url}"
-  slack_create_related_media: "*%{user}* added a related %{type} to \"%{parent}\" in *%{project}*: %{url}"
-  slack_create_project_media_no_user: "A new %{type} has been added to *%{project}*: %{url}"
-  slack_create_related_media_no_user: "A %{type} related to \"%{parent}%\" has been added to *%{project}*: %{url}"
-  slack_create_task_message: "*%{user}* created task %{url} in *%{project}*%{create_note}"
-  slack_create_task_note: " with note: %{note}"
-  slack_answer_task: |-
-    *%{user}* answered task %{url} in *%{project}*: %{response}
-    %{answer_note}
-  slack_answer_task_note: "*Note:* %{note}"
-  slack_update_task_label: |-
-    *%{user}* edited task %{url} in *%{project}* from: %{from}
-    *To:* %{to}
-  slack_update_task_description: |-
-    *%{user}* edited task note at %{url} in *%{project}* from: %{from}
-    *To:* %{to}
+  slack:
+    fields:
+      assigned: "Assigned to"
+      unassigned: "Unassigned from"
+      required: "Required?"
+      required_yes: "Yes"
+      project: "Project"
+      source: "Source"
+      status: "Status"
+      status_previous: "Previous status"
+      related_to: "Related to"
+      view_button: "View %{type} on %{app}"
+      project_source: "Source"
+      project_media: "Item"
+      attribution: "Answered by"
+    messages:
+      task_create: "%{user} (%{role} at %{team}) added a Task"
+      task_edit: "%{user} (%{role} at %{team}) edited a Task"
+      annotation_assign: "%{user} (%{role} at %{team}) assigned a %{type}"
+      annotation_unassign: "%{user} (%{role} at %{team}) unassigned a %{type}"
+      task_answer_create: "%{user} (%{role} at %{team}) answered a Task"
+      task_answer_edit: "%{user} (%{role} at %{team}) edited a Task answer"
+      task_comment: "%{user} (%{role} at %{team}) added a note to a Task"
+      project_media_comment: "%{user} (%{role} at %{team}) added a note to a %{parent_type}"
+      project_media_create: "%{user} (%{role} at %{team}) added a %{type}"
+      project_media_create_no_user: "A %{type} has been added"
+      project_media_update: "%{user} (%{role} at %{team}) edited a %{type}"
+      project_media_update_no_user: "A %{type} has been edited"
+      project_media_status: "%{user} (%{role} at %{team}) changed the %{workflow} status of a %{type}"
+      project_source_comment: "%{user} (%{role} at %{team}) added a note to a %{parent_type}"
+      project_source_create: "%{user} (%{role} at %{team}) added a %{type}"
+      project_source_update: "%{user} (%{role} at %{team}) edited a %{type}"
+      project_create: "%{user} (%{role} at %{team}) created a project"
+      user_member: "%{user} joined team %{team}"
+      user_requested: "%{user} requested to join team %{team}"
+      user_invited: "%{user} was invited to join team %{team}"
+      user_banned: "%{user} was banned from team %{team}"
   mail_view_welcome: Welcome to %{app_name}
   mail_view_register: 'You are only one step away from using %{app_name}! Please confirm
     your email address by clicking the following link:'
@@ -286,12 +307,6 @@ en:
         instruction: "Someone has requested a link to change your password, and you can do this
           through the link below. <strong>Please note that this link expires in %{expire} hours.</strong>"
   error_user_is_not_a_team_member: "Sorry, you can only assign tasks to members of this team"
-  slack_assign_verification_status: "*%{user}* assigned %{url} to *%{assignee}* in project *%{project}*"
-  slack_unassign_verification_status: "*%{user}* unassigned %{url} from *%{assignee}* in project *%{project}*"
-  slack_assign_translation_status: "*%{user}* assigned %{url} to *%{assignee}* in project *%{project}*"
-  slack_unassign_translation_status: "*%{user}* unassigned %{url} from *%{assignee}* in project *%{project}*"
-  slack_assign_task: "*%{user}* assigned task %{url} in *%{project}* to *%{assignee}*"
-  slack_unassign_task: "*%{user}* unassigned task %{url} in *%{project}* from *%{assignee}*"
   mail_see_it: "You can see it at: "
   mail_subject_assign_verification_status: "[%{team} - %{project}] A media item was assigned to you"
   mail_subject_unassign_verification_status: "[%{team} - %{project}] A media item was unassigned from you"
