Ticket #7130: Task status as workflow (#339)
* Ticket #7130: Refactor task status to be a workflow

* Ticket #7130: Trying to fix metaprogramming issue

* Ticket #7130: Trying to fix metaprogramming issue, part 2

* Ticket #7130: Fixing tests

* Ticket #7130: Fixing test

* Ticket #7130: Fixing tests

* Ticket #7130: Fixing tests

* Ticket #7130: Adding migration to convert existing task statuses to workflow

* Ticket #7130: Fix

* Ticket #7130: Fixing tests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,16 @@
 ---
 en:
   statuses:
+    task:
+      unresolved:
+        label: Unresolved
+        description: Default, not resolved yet
+      resolved:
+        label: Resolved
+        description: Task was resolved
+      cant_be_resolved:
+        label: Cannot be resolved
+        description: It was not possible to resolve the task
     ids:
       verification_status: verification
       translation_status: translation
