--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,11 +25,11 @@ en:
         label: In Progress
         description: Work has begun, but no conclusion made yet
       not_true:
-        label: 'False'
-        description: 'Conclusion: the report is false'
+        label: "False"
+        description: "Conclusion: the report is false"
       verified:
         label: Verified
-        description: 'Conclusion: the report is verified'
+        description: "Conclusion: the report is verified"
       pending:
         label: Pending
         description: Default, just added to Bridge, no work has started
@@ -51,16 +51,16 @@ en:
         description: Default, just added to Check, no work has started
       credible:
         label: Credible
-        description: 'Conclusion: the source is credible'
+        description: "Conclusion: the source is credible"
       not_credible:
         label: Not Credible
-        description: 'Conclusion: the source is not credible'
+        description: "Conclusion: the source is not credible"
       slightly_credible:
         label: Slightly Credible
-        description: 'Conclusion: the source is slightly credible'
+        description: "Conclusion: the source is slightly credible"
       sockpuppet:
         label: Sockpuppet
-        description: 'Conclusion: the source is a sockpuppet'
+        description: "Conclusion: the source is a sockpuppet"
     translation:
       pending:
         label: Pending
@@ -79,9 +79,8 @@ en:
         description: Translation has been reviewed and an error was found
   errors:
     messages:
-      extension_white_list_error: 'cannot have type %{extension}, allowed types: %{allowed_types}'
-      invalid_size: must be between %{min_width}x%{min_height} and %{max_width}x%{max_height}
-        pixels
+      extension_white_list_error: "cannot have type %{extension}, allowed types: %{allowed_types}"
+      invalid_size: "must be between %{min_width}x%{min_height} and %{max_width}x%{max_height} pixels"
   activerecord:
     models:
       link: Link
@@ -126,7 +125,7 @@ en:
             slug:
               slug_format: accepts only letters, numbers and hyphens
       messages:
-        record_invalid: 'Validation failed: %{errors}'
+        record_invalid: "Validation failed: %{errors}"
         improbable_phone: is an invalid number
         too_short:
           one: is too short (minimum is 1 character)
@@ -134,8 +133,8 @@ en:
   slack_webhook_format_wrong: Slack webhook is invalid, it should have the format
     `https://hooks.slack.com/services/XXXXX/XXXXXXXXXX`
   slug_is_reserved: is reserved
-  invalid_format_for_languages: 'Languages is invalid, it should have the format [{''id'':
-    ''en'',''title'': ''English''}]'
+  invalid_format_for_languages: "Invalid languages setting. It should have the format [{'id':
+    'en', 'title': 'English'}]"
   invalid_media_item: Sorry, this is not a valid media item
   invalid_default_status_for_custom_verification_status: The default status identifier is invalid
   invalid_active_status_for_custom_verification_status: The active status identifier is invalid
@@ -192,13 +191,13 @@ en:
       user_invited: "%{user} was invited to join team %{team}"
       user_banned: "%{user} was banned from team %{team}"
   mail_view_welcome: Welcome to %{app_name}
-  mail_view_register: 'You are only one step away from using %{app_name}! Please confirm
-    your email address by clicking the following link:'
+  mail_view_register: "You are only one step away from using %{app_name}! Please confirm
+    your email address by clicking the following link:"
   mail_view_joined: Your request to join %{team} was approved! You can now go to %{url}
     and start contributing!
   mail_view_rejected_to_join: Sorry, but your request to join %{team} was not approved.
   mail_view_request_to_join: "%{user} (%{handle}) wants to join %{team} team on %{app_name}!"
-  mail_view_process_request: 'To process this request, please login and visit:'
+  mail_view_process_request: "To process this request, please login and visit:"
   pender_could_not_parse: Could not parse this media
   mail_duplicate_email_exists: Your login method for %{app_name}
   mail_duplicate_email_exists_body: "<p>Hello, this is just a friendly reminder to
@@ -240,13 +239,10 @@ en:
           html: "When ready, the team copy will be available at <strong>%{copy_url}</strong>"
   reset_password_instructions: "%{app_name} reset password instructions"
   email_not_found: E-mail not found
-  slack_channel_format_wrong: 'Slack channel is invalid, it should have the format
-    #general'
-  translation_status_not_valid: Status not valid
-  translation_status_permission_error: You are not allowed to make this status change
-  translation_request_id_exists: There is already a translation request for this message
-  slack_update_translation_status: "*%{user}* changed translation status on *%{report}*
-    from *%{from}* to *%{to}*"
+  slack_channel_format_wrong: "Invalid Slack channel"
+  translation_status_not_valid: "Invalid status"
+  translation_status_permission_error: "Sorry, you are not allowed to make this status change."
+  translation_request_id_exists: "There is already a translation request for this message"
   auto_publisher_added_to_project: Thanks! Now all new translations under project
     %{project} will be automatically published to this account on %{provider}. If
     you change your mind, please contact the administrator or simply revoke the Bridge
@@ -276,19 +272,19 @@ en:
   role_none: member
   oembed_credit: Added by %{user} (%{role}) %{date}
   oembed_notes_count:
-    one: One note
+    one: "One note"
     other: "%{count} notes"
   oembed_completed_tasks_count:
-    one: One completed task
+    one: "One completed task"
     other: "%{count} completed tasks"
-  oembed_verification_tasks: Verification tasks
+  oembed_verification_tasks: Tasks
   oembed_tasks: Tasks
   oembed_translations: Translations
   oembed_expand_all: Expand all
   oembed_collapse_all: Collapse all
   oembed_resolved_tasks_count:
-    one: One resolved verification task
-    other: "%{count} resolved verification tasks"
+    one: "One resolved task"
+    other: "%{count} resolved tasks"
   oembed_notes: Notes
   pender_conflict: This link is already being parsed, please try again in a few seconds.
   duplicate_source: Source exists
@@ -310,7 +306,7 @@ en:
   account_exists: This account already exists
   media_exists: This media already exists
   source_exists: This source already exists
-  banned_user: 'Sorry, your account has been banned from %{app_name}. Please contact %{support_email} if you think this is an error.'
+  banned_user: "Sorry, your account has been banned from %{app_name}. Please contact the support team if you think this is an error."
   devise:
     mailer:
       reset_password_instructions:
@@ -337,8 +333,8 @@ en:
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
   project_export_email_title_csv: "Your project report is ready to be downloaded"
-  workflow_status_not_valid: "Sorry, this status is not valid"
-  workflow_status_permission_error: "Sorry, you are not allowed to change this status"
+  workflow_status_not_valid: "Invalid status"
+  workflow_status_permission_error: "Sorry, you are not allowed to change this status."
   blank_default_status_for_custom_translation_status: "Please provide a 'default' value for the custom translation statuses"
   blank_active_status_for_custom_translation_status: "Please provide an 'active' value for the custom translation statuses"
   blank_default_status_for_custom_verification_status: "Please provide a 'default' value for the custom verification statuses"
@@ -439,17 +435,17 @@ en:
             invite_owner: "Invite, approve, and remove team owners"
             invite_members: "Invite, approve, and remove team members"
   team_import:
-    invalid_google_spreadsheet_url: 'The spreadsheet URL `%{spreadsheet_url}` is invalid, it should have the format `https://docs.google.com/spreadsheets/d/XXXXXXXXX/edit#gid=0`'
-    not_found_google_spreadsheet_url: 'The spreadsheet was not found'
-    cannot_authenticate_with_the_credentials: 'Cannot authenticate Google Drive with the credentials'
-    team_not_present: 'Sorry, the team is not defined'
-    user_not_present: 'Sorry, the user is not defined'
-    user_not_authorized: 'Sorry, you are not allowed to import spreadsheet to this team'
-    invalid_project: 'Invalid project: `%{project}`'
-    invalid_user: 'Invalid user: `%{user}`'
-    invalid_status: 'Invalid status: `%{status}`'
-    blank_user: 'User is blank'
-    blank_annotator: 'Annotator is blank'
-    blank_project: 'Project is blank'
-    invalid_annotator: 'Invalid annotator: `%{user}`'
-    invalid_assignee: 'Invalid assignee: `%{user}`'
+    invalid_google_spreadsheet_url: "Invalid spreadsheet URL %{spreadsheet_url}"
+    not_found_google_spreadsheet_url: "Spreadsheet not found at %{spreadsheet_url}"
+    cannot_authenticate_with_the_credentials: "Cannot authenticate Google Drive with the current credentials. Please contact the support team to notify them of this incident."
+    team_not_present: "Current team not found during data import. Please notify the support team of this incident."
+    user_not_present: "Current user not found during data import. Please notify the support team of this incident."
+    user_not_authorized: "Sorry, you are not allowed to import data into this team."
+    invalid_project: "Invalid project %{project}"
+    invalid_user: "Invalid author %{user}"
+    invalid_status: "Invalid status %{status}"
+    blank_user: "Invalid blank author"
+    blank_annotator: "Invalid blank annotator"
+    blank_project: "Invalid blank project"
+    invalid_annotator: "Invalid annotator %{user}"
+    invalid_assignee: "Invalid assignee %{user}"
