--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1,9 +1,4 @@
 pt:
-  link: Link
-  claim: Afirmação
-  uploadedimage: Imagem
-  uploadefile: Arquivo
-  blank: "(vazio)"
   statuses:
     media:
       undetermined:
@@ -13,11 +8,11 @@ pt:
         label: Inconclusivo
         description: Não é possível obter conclusões a partir das evidências disponíveis.
       not_true:
-        label: 'Falso'
-        description: 'Conclusão: o relato é falso'
+        label: "Falso"
+        description: "Conclusão: o relato é falso"
       verified:
         label: Verificado
-        description: 'Conclusão: o relato foi verificado'
+        description: "Conclusão: o relato foi verificado"
       pending:
         label: Pendente
         description: Padrão, recém adicionado ao Bridge, o trabalho ainda não foi iniciado
@@ -39,16 +34,16 @@ pt:
         description: Padrão, recentemente inserido no Check, nenhum trabalho iniciado
       credible:
         label: Verossímil
-        description: 'Conclusão: a fonte é verossímil'
+        description: "Conclusão: a fonte é verossímil"
       not_credible:
         label: Inverossímil
-        description: 'Conclusão: esta fonte não é verossímil'
+        description: "Conclusão: esta fonte não é verossímil"
       slightly_credible:
         label: Ligeiramente verossímil
-        description: 'Conclusão: esta fonte é ligeiramente verossímil'
+        description: "Conclusão: esta fonte é ligeiramente verossímil"
       sockpuppet:
         label: Fake
-        description: 'Conclusão: a fonte da informação é um fake'
+        description: "Conclusão: a fonte da informação é um fake"
     translation:
       pending:
         label: Pendente
@@ -67,8 +62,8 @@ pt:
         description: A tradução foi revisada e erros foram encontrados
   errors:
     messages:
-      extension_white_list_error: 'Não pode ter o tipo %{extension}, tipos permitidos: %{allowed_types}'
-      invalid_size: Deve ter entre %{min_width} x %{min_height} e %{max_width} x %{max_height} pixels
+      extension_white_list_error: "Não pode ter o tipo %{extension}, tipos permitidos: %{allowed_types}"
+      invalid_size: "Deve ter entre %{min_width} x %{min_height} e %{max_width} x %{max_height} pixels"
   activerecord:
     models:
       link: Link
@@ -88,8 +83,6 @@ pt:
         name: Nome
       contact:
         phone: Telefone
-      comment:
-        text: Comentário
       user:
         reset_password_token: Redefinir o token da senha
         email: E-mail
@@ -104,14 +97,13 @@ pt:
             slug:
               slug_format: aceita apenas letras, números e hífens
       messages:
-        record_invalid: 'A validação falhou: %{errors}'
+        record_invalid: "A validação falhou: %{errors}"
         improbable_phone: é um número inválido
         too_short:
           one: é muito curto (mínimo de 1 caractere)
           other: É muito curto (mínimo de %{count} caracteres)
   slack_webhook_format_wrong: O Webhook do Slack é inválido, ele deve ter o formato `https://hooks.slack.com/services/XXXXX/XXXXXXXXXX`
   slug_is_reserved: é reservado
-  invalid_format_for_languages: 'O campo "Languages" é inválido, ele deve ter o formato [{''id'': ''en'',''title'': ''English''}]'
   invalid_media_item: Desculpe, este não é um item de mídia válido
   invalid_default_status_for_custom_verification_status: Identificador de status padrão é inválido
   invalid_active_status_for_custom_verification_status: Identificador de status ativo é inválido
@@ -129,34 +121,12 @@ pt:
   rejected: Não aprovado
   mail_request_to_join_processed: Seu pedido para participar da equipe %{team} no %{app_name} foi %{status}
   mail_new_account: Nova conta para você no %{app_name}
-  slack_update_verification_status: "*%{user}* mudou o status da verificação à %{url} em *%{project}* de _%{from}_ para *%{to}*"
-  slack_save_embed: "*%{user}* alterou o título  do relato no *%{project}* de _%{from}_ para %{to}"
-  slack_save_comment: "*%{user}* inseriu uma nota em %{url} em *%{project}*: %{comment}"
-  slack_create_project: "*%{user}* criou um projeto: %{url}"
-  slack_create_team_user: "*%{user}*  juntou-se à equipe %{url}"
-  slack_create_project_media: "*%{user}* inseriu um novo %{type} ao *%{project}*: %{url}"
-  slack_create_related_media: "*%{user}* adicionou um(a) %{type} relacionado(a) a \"%{parent}\" em *%{project}*: %{url}"
-  slack_create_project_media_no_user: "Um novo %{type} foi inserido ao *%{project}*: %{url}"
-  slack_create_related_media_no_user: "Um(a) %{type} relacionado a \"%{parent}%\" foi adicionado em *%{project}*: %{url}"
-  slack_create_task_message: "*%{user}* criou a tarefa %{url} em *%{project}*%{assignment}%{create_note}"
-  slack_create_task_assignment: " atribuído(a) a %{assignee}"
-  slack_create_task_note: " com nota: %{note}"
-  slack_answer_task: |-
-      *%{user}* respondeu a tarefa %{url} em *%{project}*: %{response}
-      %{answer_note}
-  slack_answer_task_note: "*Nota:* %{note}"
-  slack_update_task_label: |-
-      *%{user}* editou a tarefa %{url} em *%{project}* de: %{from}
-      *Para:* %{to}
-  slack_update_task_description: |-
-      *%{user}* editou a nota da tarefa em %{url} em *%{project}* de: %{from}
-      *Para:* %{to}
   mail_view_welcome: Bem-vindo ao %{app_name}
-  mail_view_register: 'Você está apenas a um passo de usar o %{app_name}! Por favor confirme o seu endereço de e-mail clicando no seguinte link:'
+  mail_view_register: "Você está apenas a um passo de usar o %{app_name}! Por favor confirme o seu endereço de e-mail clicando no seguinte link:"
   mail_view_joined: Sua solicitação para participar de %{team} foi aprovada! Agora você pode ir para %{url} e começar a contribuir!
   mail_view_rejected_to_join: Desculpe, mas sua solicitação para participar de %{team} não foi aprovada.
   mail_view_request_to_join: "%{user} (%{handle}) quer participar da equipe %{team} no %{app_name}!"
-  mail_view_process_request: 'Para processar esta solicitação, por favor faça o login e visite:'
+  mail_view_process_request: "Para processar esta solicitação, por favor faça o login e visite:"
   pender_could_not_parse: Não foi possível analisar esta mídia
   mail_duplicate_email_exists: Seu método de login no %{app_name}
   mail_duplicate_email_exists_body: "<p>Olá, este é apenas um lembrete para ajudar a garantir que você faça login no %{app_name}.</p> <p>O que aconteceu: você tentou se registrar no %{app_name} com uma conta de %{user_provider} associada ao e-mail %{user_email}. Esse endereço de e-mail já está associado a uma conta de %{duplicate_provider} no %{app_name}.</p> <p>O que fazer agora: Faça login com sua conta %{duplicate_provider}.</p> <p>Então você estará conectado com a conta que estava usando antes. Se você precisar de ajuda adicional, por favor envie um e-mail para %{support_email}.</p> <p> - Equipe %{app_name}</p>"
@@ -185,11 +155,7 @@ pt:
           html: "Quando estiver pronto, a cópia da equipe estará disponível em <strong>%{copy_url}</strong>"
   reset_password_instructions: "Instruções para redefinir a senha do %{app_name}"
   email_not_found: E-mail não encontrado
-  slack_channel_format_wrong: 'O canal do Slack é inválido, ele deve ter o formato #general'
-  translation_status_not_valid: Status inválido
-  translation_status_permission_error: Você não tem permissão para fazer essa alteração de status
-  translation_request_id_exists: Já existe um pedido de tradução para esta mensagem
-  slack_update_translation_status: "*%{user}* mudou o status da tradução em *%{report}* de *%{from}* para *%{to}*"
+  translation_request_id_exists: "Já existe um pedido de tradução para esta mensagem"
   auto_publisher_added_to_project: Obrigado! Agora todas as novas traduções no projeto %{project} serão automaticamente publicadas nesta conta no %{provider}. Se você mudar de ideia, por favor contacte o administrador ou simplesmente remova a autorização do Bridge no %{provider}.
   invalid_token: Token inválido
   viber_screenshot_footer: "Tradução de %{source_language} para %{target_language}: “%{source_text}”"
@@ -215,14 +181,10 @@ pt:
   oembed_completed_tasks_count:
     one: "Uma tarefa concluída"
     other: "%{count} tarefas concluídas"
-  oembed_verification_tasks: Tarefas de verificação
   oembed_tasks: Tarefas
   oembed_translations: Traduções
   oembed_expand_all: Expandir tudo
   oembed_collapse_all: Recolher tudo
-  oembed_resolved_tasks_count:
-    one: "Uma tarefa de verificação concluída"
-    other: "%{count} tarefas de verificação concluídas"
   oembed_notes: Notas
   pender_conflict: Este link já está sendo processado, por favor tente novamente em alguns segundos.
   duplicate_source: Fonte existe
@@ -243,18 +205,11 @@ pt:
   account_exists: Conta já existe
   media_exists: Mídia já existe
   source_exists: Fonte já existe
-  banned_user: 'Desculpe, sua conta foi banida de %{app_name}. Por favor, entre em contato com %{support_email} se achar que isso é um erro.'
   devise:
     mailer:
       reset_password_instructions:
         instruction: "Alguém fez o pedido para redefinir sua senha, e você pode fazer isso clicando no link abaixo. <strong>Observe que este link expira em %{expire} horas.</strong>"
   error_user_is_not_a_team_member: "Desculpe, você pode somente atribuir tarefas a membros desta equipe"
-  slack_assign_verification_status: "*%{user}* atribuiu %{url} a *%{assignee}* em *%{project}*"
-  slack_unassign_verification_status: "*%{user}* removeu a atribuição %{url} de *%{assignee}* em *%{project}*"
-  slack_assign_translation_status: "*%{user}* atribuiu %{url} a *%{assignee}* em *%{project}*"
-  slack_unassign_translation_status: "*%{user}* removeu a atribuição %{url} de *%{assignee}* em *%{project}*"
-  slack_assign_task: "*%{user}* atribuiu a tarefa %{url} a *%{assignee}* em *%{project}*"
-  slack_unassign_task: "*%{user}* removeu a atribuição da tarefa %{url} de *%{assignee}* em *%{project}*"
   mail_see_it: "Você pode o ver aqui: "
   mail_subject_assign_verification_status: "[%{team} - %{project}] Uma mídia foi atribuída para você"
   mail_subject_unassign_verification_status: "[%{team} - %{project}] A atribuição de uma mídia foi removida de você"
@@ -275,8 +230,6 @@ pt:
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
   project_export_email_title_csv: "Seu relatório de projeto está pronto para baixar"
-  workflow_status_not_valid: "Desculpe, este status não é válido"
-  workflow_status_permission_error: "Desculpe, você não tem permissão para mudar este status"
   blank_default_status_for_custom_translation_status: "Por favor, forneça um valor padrão para os status de tradução personalizada"
   blank_active_status_for_custom_translation_status: "Por favor, forneça um valor ativo para os status de tradução personalizada"
   blank_default_status_for_custom_verification_status: "Por favor, forneça um valor padrão para os status de verificação personalizada"
